Change flex vertical alignment classes to avoid name conflicts
Adding the prefix "align-" before "top", "middle", and "bottom" helps
distinguish these from the grid alignment positions currently, but
generally collisions occuring already is a little concerning. The issue
mainly stems from some positioning being decided by the container and
others by the element itself.

--- a/src/global.css
+++ b/src/global.css
@@ -34,15 +34,15 @@ body > * {
 	justify-content: space-between;
 }
 
-.flex.top {
+.flex.align-top {
 	align-items: start;
 }
 
-.flex.middle {
+.flex.align-middle {
 	align-items: center;
 }
 
-.flex.bottom {
+.flex.align-bottom {
 	align-items: end;
 	align-content: end;
 }
